[24] Create Java 24 constants and test framework changes #2905 (#3015)
https://github.com/eclipse-jdt/eclipse.jdt.core/pull/3015